# pydreg

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: METHODS.md  OPTIMIZATION.md  PERF_LOG.md  PLANNING.md  plot_timing_comparison.py  timing_comparison.tsv
scripts/: _safetensors_io.py  bench_backends.py  dreg_model.py  dreg_rf_model.py  export_dreg_model.R  export_dreg_rf_model.R  pack_safetensors.py
src/pydreg/: __init__.py  _safetensors_io.py  backend.py  cli.py  features.py  infp.py  io.py  models.py  peaks.py  pipeline.py  rfsplit.py  smoothing.py  stats.py
tests/: conftest.py  test_backend.py  test_features.py  test_io.py  test_models.py  test_peaks.py  test_pipeline.py  test_rfsplit.py  test_smoothing.py  test_stats.py
