[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydreg"
version = "0.1.2"
description = "End-to-end dREG peak calling from PRO-seq/GRO-seq bigWig data"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "pybigtools>=0.3",
  "pysam>=0.22",
  "huggingface-hub>=0.24",
  "safetensors>=0.4",
  "zstandard>=0.22",
  "numba>=0.64.0",
  "tqdm>=4.68.4",
  "threadpoolctl>=3.6.0",
]
keywords = [
  "bioinformatics",
  "bigwig",
  "genomics",
  "transcriptional regulation",
  "pro-seq",
  "chro-seq",
  "gro-seq",
  "peak calling",
  "svm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
pydreg = "pydreg.cli:main"

[project.optional-dependencies]
# cuML/RAPIDS is Linux+CUDA only; the sys_platform/platform_machine marker
# means `uv sync --extra gpu` simply omits this package on macOS/Windows/
# unsupported architectures rather than failing. No custom package index is
# needed as of RAPIDS 25.10 -- cuml-cu12 ships as a real wheel on plain PyPI
# (confirmed via the PyPI JSON API). Never depend on the bare `cuml` name on
# PyPI -- that's an unrelated, unmaintained, ancient package (v0.6.1).
#
# cuml-cu12 itself requires Python >=3.11, so this project's own floor is
# set to >=3.11 too -- keeps `uv sync --extra gpu` from ever failing on a
# Python-version mismatch.
#
# cupy-cuda12x is listed explicitly (not just relied on as cuml-cu12's own
# transitive dependency) for the experimental "cupy" backend tier
# (pydreg.backend._build_cupy_predict_fn) -- see docs/OPTIMIZATION.md. It's
# a real wheel on plain PyPI too, confirmed via the PyPI JSON API.
gpu = [
  "cuml-cu12>=25.10; sys_platform == 'linux' and platform_machine in 'x86_64 aarch64'",
  "cupy-cuda12x>=13.0; sys_platform == 'linux' and platform_machine in 'x86_64 aarch64'",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/adamyhe/pydreg"
Repository = "https://github.com/adamyhe/pydreg"
Issues = "https://github.com/adamyhe/pydreg/issues"

[tool.hatch.build]
exclude = [
  "/.uv-cache",
  "/.venv",
  "/dist",
  "/CLAUDE.md",
  "/AGENTS.md",
  "/src/**/*.egg-info",
  "/src/**/__pycache__",
  "/scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydreg"]
