[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydreg"
version = "0.2.0"
description = "End-to-end dREG peak calling from PRO-seq/GRO-seq bigWig data"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "pybigtools>=0.3",
  "pysam>=0.22",
  "huggingface-hub>=0.24",
  "safetensors>=0.4",
  "zstandard>=0.22",
  "numba>=0.64.0",
  "tqdm>=4.68.4",
  "threadpoolctl>=3.6.0",
]
keywords = [
  "bioinformatics",
  "bigwig",
  "genomics",
  "transcriptional regulation",
  "pro-seq",
  "chro-seq",
  "gro-seq",
  "peak calling",
  "svm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
pydreg = "pydreg.cli:main"

[project.optional-dependencies]
# CUDA is Linux+CUDA only; the sys_platform/platform_machine marker means
# `uv sync --extra gpu` simply omits this package on macOS/Windows/
# unsupported architectures rather than failing.
#
# cupy-cuda12x backs the "cupy" backend tier
# (pydreg.backend._build_cupy_predict_fn) -- see docs/OPTIMIZATION.md. It's
# a real wheel on plain PyPI, confirmed via the PyPI JSON API. (This extra
# used to also pull in cuml-cu12 for a now-removed "cuml" tier, which is
# why requires-python below is >=3.11 rather than cupy-cuda12x's own
# >=3.10 floor -- left as-is since lowering it is a separate decision that
# affects every user, not just GPU ones.)
gpu = [
  "cupy-cuda12x>=13.0; sys_platform == 'linux' and platform_machine in 'x86_64 aarch64'",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/adamyhe/pydreg"
Repository = "https://github.com/adamyhe/pydreg"
Issues = "https://github.com/adamyhe/pydreg/issues"

[tool.hatch.build]
exclude = [
  "/.uv-cache",
  "/.venv",
  "/dist",
  "/CLAUDE.md",
  "/AGENTS.md",
  "/src/**/*.egg-info",
  "/src/**/__pycache__",
  "/scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydreg"]
