[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydreg"
version = "0.2.2"
description = "End-to-end dREG peak calling from PRO-seq/GRO-seq bigWig data"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  # >=1.16 specifically: scipy.stats._qmvnt._qmvn_inner (the compiled QMC
  # kernel stats.py drives directly, see that module's docstring) doesn't
  # exist before 1.16.0 -- confirmed empirically (1.15.3 lacks it, 1.16.0
  # has it). The old >=1.11 floor was simply wrong; CI catching this on a
  # real resolution against Python 3.10 (which can only resolve up to
  # 1.15.3) is what surfaced it. scipy>=1.16 itself requires Python
  # >=3.11, which is also why this project's requires-python floor can't
  # go below 3.11 -- there is no scipy release with both _qmvn_inner and
  # Python 3.10 support.
  "scipy>=1.16",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "pybigtools>=0.3",
  "pysam>=0.22",
  "huggingface-hub>=0.24",
  "safetensors>=0.4",
  "zstandard>=0.22",
  "numba>=0.64.0",
  "tqdm>=4.68.4",
  "threadpoolctl>=3.6.0",
]
keywords = [
  "bioinformatics",
  "bigwig",
  "genomics",
  "transcriptional regulation",
  "pro-seq",
  "chro-seq",
  "gro-seq",
  "peak calling",
  "svm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
pydreg = "pydreg.cli:main"

[project.optional-dependencies]
# CUDA is Linux+CUDA only; the sys_platform/platform_machine marker means
# `uv sync --extra gpu` simply omits this package on macOS/Windows/
# unsupported architectures rather than failing.
#
# cupy-cuda12x backs the "cupy" backend tier
# (pydreg.backend._build_cupy_predict_fn) -- see docs/OPTIMIZATION.md. It's
# a real wheel on plain PyPI, confirmed via the PyPI JSON API. Its own
# floor (Python >=3.10) is looser than this project's actual floor, which
# is set by scipy>=1.16 (see the dependencies list above) -- not numba,
# which was the initial (incorrect) assumption before CI caught it.
#
# The [ctk] extra matters, not just cupy-cuda12x alone: as of cupy 14.x,
# the base package no longer unconditionally bundles its own CUDA toolkit
# (nvrtc/cudart/cublas/...) -- it uses `cuda-pathfinder` to *locate* one,
# system-installed or via [ctk]. On a machine with only an NVIDIA driver
# and no separately-installed CUDA toolkit, cuda-pathfinder has nothing to
# find, and cupy fails at JIT-compile time with a confusing
# "CUDA versions below 12 are not supported" CCCL error -- confirmed on
# real hardware (driver reporting CUDA 13.0, no nvcc/CUDA_HOME/modules at
# all). [ctk] pulls in a real, self-contained CUDA 12.x toolkit (including
# nvrtc) via pip, the same way cuml-cu12's own transitive dependencies used
# to (silently) provide one before cuml was dropped -- see
# docs/PERF_LOG.md.
gpu = [
  "cupy-cuda12x[ctk]>=13.0; sys_platform == 'linux' and platform_machine in 'x86_64 aarch64'",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/adamyhe/pydreg"
Repository = "https://github.com/adamyhe/pydreg"
Issues = "https://github.com/adamyhe/pydreg/issues"

[tool.hatch.build]
exclude = [
  "/.uv-cache",
  "/.venv",
  "/dist",
  "/CLAUDE.md",
  "/AGENTS.md",
  "/src/**/*.egg-info",
  "/src/**/__pycache__",
  "/scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydreg"]
